--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -37,19 +37,10 @@
     <string name="clear_miui_data_dialog_text">Base de datos del proveedor de MIUI Weather eliminada!</string>
     <string name="clear_miui_data_summary">Borra la base de datos del proveedor de MIUI Weather</string>
     <string name="close">Salir</string>
-    <string name="conf_add_widget">Añadir Widget</string>
-    <string name="conf_dark_skin">Tema oscuro</string>
-    <string name="conf_choose_skin">Escoger tema</string>
-    <string name="conf_light_skin">Tema blanco</string>
-    <string name="conf_name">Configurar Widget</string>
-    <string name="conf_no_background">Sin fondo</string>
     <string name="date_format_title">Formato de fecha</string>
     <string name="date_format_mdy">MM/dd/yyyy</string>
     <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="dialog_color_picker">Selector de color</string>
-    <string name="dlg_go_to_forecast">Ir al pronóstico</string>
-    <string name="dlg_select_action">Seleccione una acción</string>
-    <string name="dlg_set_as_home">Establecer como \"Mi Casa\"</string>
     <string name="donate">Donar</string>
     <string name="donations_button_close">Cerrar</string>
     <string name="donations_description">"¿Encuentra útil esta aplicación?\n¡Ayude en su desarrollo mediante Flattr o envíe donaciones usando el Google Play Store!"</string>
@@ -67,8 +58,6 @@
     <string name="donations_paypal_item_name">InApp Donation</string>
     <string name="donations_thanks_dialog">"¡Gracias por donar!\n¡Te lo agradezco mucho!"</string>
     <string name="donations_thanks_dialog_title">¡Gracias!</string>
-    <string name="download_video">Descargar vídeo</string>
-    <string name="end_time_title">Fin</string>
     <string name="fetching_location">Obteniendo ubicación\u2026</string>
     <string name="foreca_clear">Despejado</string>
     <string name="foreca_cloudy">Nublado</string>
@@ -129,7 +118,6 @@
     <string name="menu_delete_theme">Borrar tema</string>
     <string name="menu_hourly">Ampliado</string>
     <string name="menu_import">Importar tema desde la tarjeta SD</string>
-    <string name="menu_indices">Estilo de vida</string>
     <string name="menu_locations">Ciudades</string>
     <string name="menu_moon_phases">Fases lunares</string>
     <string name="menu_settings">Configuración</string>
@@ -149,6 +137,9 @@
     <string name="moon_illuminated">Iluminada al</string>
     <string name="moon_since">Inicio</string>
     <string name="network_error">No se pudo conectar al servidor\nComprueba tus ajustes de red.</string>
+    <string name="network_in_quiet_hours">Estas en horas de reposo. Actualizaciones canceladas.</string>
+    <string name="network_in_roaming">Tienes en ajustes deshabilitadas las actualizaciones en roaming.</string>
+    <string name="network_wifi_only">Actualizaciones sólo con Wi-Fi.</string>
     <string name="new_version">Nueva versión</string>
     <string name="no_provider">Fallo al posicionar\nEscoge tu ubicación manualmente</string>
     <string name="no_weather_provider">No se ha encontrado el proveedor de climatología MIUI</string>
@@ -158,17 +149,11 @@
     <string name="pressure_units">Unidades de presión</string>
     <string name="pressure_units_mb">" hPa"</string>
     <string name="pressure_units_mmhg">" mmHg"</string>
-    <string name="quiet_hours_enabled">Activar horas de Reposo</string>
+    <string name="quiet_hours_enabled">Activar horas de reposo</string>
     <string name="quiet_hours_enabled_off">Desactivado, las actualizaciones funcionan con normalidad</string>
     <string name="quiet_hours_enabled_on">Horas de reposo activado</string>
     <string name="quiet_hours_title">Horas de reposo</string>
-    <string name="settings_about_summary">Información sobre la aplicación</string>
     <string name="settings_about_title">Acerca de</string>
-    <string name="settings_animation_download_summary">Se descargarán los archivos de vídeo de las animaciones para as condiciones climatológicas actuales (sólo cuando sea necesario)</string>
-    <string name="settings_animation_download_title">Descargar animaciones</string>
-    <string name="settings_animation_show_summary">Se mostrará la animación del tiempo de las condiciones climatológicas actuales</string>
-    <string name="settings_animation_show_title">Mostrar animación</string>
-    <string name="settings_animation_type">Tipo de animación</string>
     <string name="settings_category_animation">Animaciones</string>
     <string name="settings_category_animation_sum">Configurar las animaciones del clima y la política descarga de las animaciones</string>
     <string name="settings_category_app_update">Actualización de la aplicación</string>
@@ -188,8 +173,8 @@
     <string name="settings_click_actions">Acciones al tocar</string>
     <string name="settings_check_updates_summary">Buscar actualizaciones al iniciar la aplicación</string>
     <string name="settings_check_updates_title">Buscar actualizaciones</string>
-    <string name="settings_hide_bottom_bar_title">Ocultar barra de botones</string>
-    <string name="settings_hide_bottom_bar_summary">Toca la pantalla para ocultar la barra de botones inferior</string>
+    <string name="settings_colorize_weather_icons_title">Color de los iconos</string>
+    <string name="settings_colorize_weather_icons_summary">Establecer el color de los iconos (para iconos del clima blancos por ejemplo)</string>
     <string name="settings_miui_support_summary">Activar para dar soporte a los widgets nativos de MIUI Weather</string>
     <string name="settings_miui_support_title">Soporte MIUI widgets</string>
     <string name="settings_miui_v5_summary">Activar sólo si usa una ROM MIUI v5</string>
@@ -202,8 +187,6 @@
     <string name="settings_notification_type">Tipo de notificación</string>
     <string name="settings_show_info_summary">Mostrar u ocultar elementos de la interfaz</string>
     <string name="settings_show_info_title">Mostrar información</string>
-    <string name="settings_show_weather_icons_summary">Mostrar iconos del tiempo (en lugar de la descripción textual del tiempo) en el pronóstico de 3 días</string>
-    <string name="settings_show_weather_icons_title">Mostrar iconos del tiempo</string>
     <string name="settings_time_format_12h">Formato 12h</string>
     <string name="settings_update_autoupdate_summary">Actualización automática de la previsión meteorológica</string>
     <string name="settings_update_autoupdate_title">Actualización automática</string>
